# NonCrect

./: .gitignore  README.md  pyproject.toml
src/NonCrect/: Camera.py  Component.py  ComponentSkeleton.py  ComponentSkeleton.pyi  DataClass.py  Definition.py  Engine.py  GameObject.py  PygameComponent.py  Type.py  objects.py
tests/: Game.py  __init__.py  run.py
