[build-system]
requires = ["setuptools>=68.2.0"]
build-backend = "setuptools.build_meta"


[project]
name = "NonCrect"
version = "0.0.0"
description = "This repository is action game programs."

readme = "README.md"
license = {file="LICENSE"}

requires-python = ">=3.10"
dependencies = [
   "CodingTools@git+https://github.com/AtoKashinoki/CodingTools2.git",
]

authors = [
   {name="AtoKashinoki", email="atokashinoki@gmail.com"}
]
classifiers = [
   "Programming Language :: Python :: Python3.10",
   "License :: OSI Approved :: MIT License",
   "Operating System :: Microsoft :: Windows :: Windows11"
]


[project.urls]
"Homepage" = "https://github.com/AtoKashinoki/CodingTools2.git"
"Bug Tracker" = "https://github.com/AtoKashinoki/CodingTools2.git/Issues"


[project.scripts]
